画面サイズに合わせてnavigator下の空白が変化するよう修正

--- a/01_User.html
+++ b/01_User.html
@@ -10,6 +10,20 @@
   </head>
 
   <!-- ナビゲータ -->
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand">
+        <i class="bi bi-easel2-fill"></i>
+        WS予約サイト
+      </a>
+      <div>
+        <span class="navbar-text ml-auto" style="display:inline-block; width: 267px;">
+          <i class="bi bi-person"></i>
+          <?=mailAdress ?>
+        </span>
+      </div>
+    </div>
+  </nav>
 
   <!-- ローディング画面 -->
   <div id="loading">
@@ -20,21 +34,6 @@
   </div>
 
   <body>
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand">
-          <i class="bi bi-easel2-fill"></i>
-          WS予約サイト
-        </a>
-        <div>
-          <span class="navbar-text ml-auto" style="display:inline-block; width: 267px;">
-            <i class="bi bi-person"></i>
-            <?=mailAdress ?>
-          </span>
-        </div>
-      </div>
-    </nav>
-
     <div class="row" id="containerWorkshop">
       <!-- 講座設定カードの表示エリア -->
     </div>
@@ -48,6 +47,14 @@
 
     <script>
       const mode = "user";
+
+      // 画面上部の空白
+      const resizeObserver = new ResizeObserver(function(e){
+        var h = document.querySelector("nav").offsetHeight;
+        document.querySelector("body").setAttribute("style", "padding-top: "+h+"px");
+      })
+      resizeObserver.observe(document.querySelector("nav"));
+
       reload(0)
     </script>
   </body>
