--- a/00_reload.html
+++ b/00_reload.html
@@ -28,7 +28,7 @@
 
     // 実行
     for(let key in workshopDB_sorted){
-      createWorkshop(workshopDB_sorted[key], key, mode);
+      createWorkshop(workshopDB_sorted[key], key, false);
     }
   }
 </script>
