--- a/02_Manager.html
+++ b/02_Manager.html
@@ -41,7 +41,7 @@
 
     <!-- 新規ワークショップの追加ボタン -->
     <div class="btn-group m-2" role="group" aria-label="Basic mixed styles example">
-      <button type="button" class="btn btn-outline-primary btn-lg" onclick="createWorkshop(newWORKSHOP, generateUuid(), mode)">+</button>
+      <button type="button" class="btn btn-outline-primary btn-lg" onclick="createWorkshop(newWORKSHOP, generateUuid(), true)">+</button>
       <button type="button" class="btn btn-outline-success btn-lg" onclick="reload()"><i class="bi bi-arrow-clockwise"></i></button>
     </div>
 
