既存ワークショプの変更可能箇所を制限

--- a/01_User.html
+++ b/01_User.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <a class="navbar-brand">
         <i class="bi bi-easel2-fill"></i>
-        WS予約サイト
+        ワークショップ予約サイト
       </a>
       <div>
         <span class="navbar-text ml-auto" style="display:inline-block; width: 267px;">
