ボタン表示の変更

--- a/00_Template.html
+++ b/00_Template.html
@@ -39,10 +39,10 @@
 
 <!-- 設定ボタングループ -->
 <template id="SaveDeleteBtnTemplate">
-  <button type="button" class="btn btn-outline-danger delete-contents-btn">DELETE</button>
+  <button type="button" class="btn btn-outline-danger delete-contents-btn">削除</button>
 
   <div class="dropup">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="addBtnMenu" data-bs-toggle="dropdown" aria-expanded="false">Add Item</button>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="addBtnMenu" data-bs-toggle="dropdown" aria-expanded="false">機能追加</button>
     <ul class="dropdown-menu" aria-labelledby="addBtnMenu">
       <li><button class="dropdown-item add-new-module" type="button">タイトルと説明</button></li>
       <li><button class="dropdown-item add-new-module" type="button">短文回答</button></li>
@@ -52,7 +52,7 @@
     </ul>
   </div>
 
-  <button type="button" class="btn btn-primary save-contents-btn">SAVE</button>
+  <button type="button" class="btn btn-primary save-contents-btn">保存</button>
 </template>
 <!-- 予約ボタン -->
 <template id="ReserveBtnTemplate">
