回答取得のために改変

--- a/00_Template.html
+++ b/00_Template.html
@@ -252,7 +252,7 @@
 <!-- ラジオオプション -->
 <template id="templateChoiceOption">
   <div class="form-check option">
-    <input class="form-check-input questionInput" type="radio" id="">
+    <input class="form-check-input questionInput" type="radio" id="" value="">
     <label class="form-check-label"></label>
   </div>
 </template>
@@ -293,7 +293,7 @@
 <!-- チェックボックスオプション -->
 <template id="templateCheckboxOption">
   <div class="form-check option">
-    <input class="form-check-input questionInput" type="checkbox" id="">
+    <input class="form-check-input questionInput" type="checkbox" id="" value="">
     <label class="form-check-label"></label>
   </div>
 </template>
