--- a/02_Manager.html
+++ b/02_Manager.html
@@ -50,10 +50,10 @@
         開発用モード切り替え
       </button>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <li><a class="dropdown-item" href="https://script.google.com/a/macros/ima.aim.aoyama.ac.jp/s/AKfycbxwsUyBzyt-0056vDp9fXXB7_EXeaS-vcQcvXJaHHU/dev?p=user">Dev - User</a></li>
-        <li><a class="dropdown-item" href="https://script.google.com/a/macros/ima.aim.aoyama.ac.jp/s/AKfycbxwsUyBzyt-0056vDp9fXXB7_EXeaS-vcQcvXJaHHU/dev?p=manager">Dev - Manager</a></li>
-        <li><a class="dropdown-item" href="https://script.google.com/a/macros/ima.aim.aoyama.ac.jp/s/AKfycbxwsUyBzyt-0056vDp9fXXB7_EXeaS-vcQcvXJaHHU/exec?p=user">Exe - User</a></li>
-        <li><a class="dropdown-item" href="https://script.google.com/a/macros/ima.aim.aoyama.ac.jp/s/AKfycbxwsUyBzyt-0056vDp9fXXB7_EXeaS-vcQcvXJaHHU/exec?p=manager">Exe - Manager</a></li>
+        <li><a class="dropdown-item" href="https://script.google.com/a/macros/aoyama.jp/s/AKfycbwq-xsZqpBGittsBxHHEK-OOVVcA7f3ib_4cHmUKxU/dev?p=user">Dev - User</a></li>
+        <li><a class="dropdown-item" href="https://script.google.com/a/macros/aoyama.jp/s/AKfycbwq-xsZqpBGittsBxHHEK-OOVVcA7f3ib_4cHmUKxU/dev?p=manager">Dev - Manager</a></li>
+        <li><a class="dropdown-item" href="https://script.google.com/a/macros/aoyama.jp/s/AKfycbwq-xsZqpBGittsBxHHEK-OOVVcA7f3ib_4cHmUKxU/exec?p=user">Exe - User</a></li>
+        <li><a class="dropdown-item" href="https://script.google.com/a/macros/aoyama.jp/s/AKfycbwq-xsZqpBGittsBxHHEK-OOVVcA7f3ib_4cHmUKxU/exec?p=manager">Exe - Manager</a></li>
       </ul>
     </div>
 
