--- a/00_Template.html
+++ b/00_Template.html
@@ -4,12 +4,12 @@
   <div class="workshop-contents col-lg-4">
     <!-- Button(card) trigger modal -->
     <div class="card m-2">
-      <h7 class="card-header">Workshop</h7>
+      <h7 class="card-header">ワークショップ</h7>
       <div class="card-body">
         <h5 class="card-title" id="card-title"></h5>
         <h6 class="card-subtitle mb-2 text-muted" id="scheduled"></h6>
         <p class="card-text" id="card-subs"></p>
-        <button type="button" class="btn btn-primary btn-lg" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#modalDiv">
+        <button type="button" class="btn btn-lg" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#modalDiv">
           <i class="bi bi-tools"></i>
         </button>
       </div>
