回答保存完成

--- a/01_validation.html
+++ b/01_validation.html
@@ -86,12 +86,9 @@
       } 
     }
 
-    console.log(answer);
-    console.log("Terminal:", Terminal);
-
-    // テストリクエスト
+    // 回答をサーバへ送信
     if (Terminal){
-      google.script.run.withSuccessHandler(console.log("リクエスト送信")).saveRequest(workshop_id, answer)
+      google.script.run.saveRequest(workshop_id, answer)
     }
   }
 </script>
